metrics endoint added
