# controllers/Facturas.js
@@ -35,3 +35,13 @@ module.exports.obtenerFacturasUsuario = function obtenerFacturasUsuario (req, re
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getMetrics = function getMetrics (req, res, next) {
+  Facturas.getMetrics()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
