# index.js
@@ -2,6 +2,7 @@
 
 var path = require('path');
 var http = require('http');
+const Prometheus = require('prom-client')
 
 var oas3Tools = require('oas3-tools');
 var serverPort = 8080;
@@ -16,32 +17,7 @@ var options = {
 var expressAppConfig = oas3Tools.expressAppConfig(path.join(__dirname, 'api/openapi.yaml'), options);
 var app = expressAppConfig.getApp();
 
-// Init
-const Prometheus = require('prom-client')
-const httpRequestDurationMicroseconds = new Prometheus.Histogram({
-  name: 'http_request_duration_ms',
-  help: 'Duration of HTTP requests in ms',
-  labelNames: ['route'],
-  // buckets for response time from 0.1ms to 500ms
-  buckets: [0.10, 5, 15, 50, 100, 200, 300, 400, 500]
-})
-
-app.use((req, res, next) => {
-    const start = Date.now();
-    res.on('finish', () => {
-      const responseTimeInMs = Date.now() - start;
-      httpRequestDurationMicroseconds
-        .labels(req.route.path)
-        .observe(responseTimeInMs);
-    });
-    next();
-});
-
-// Metrics endpoint
-app.get('/metrics', (req, res) => {
-    res.set('Content-Type', Prometheus.register.contentType)
-    res.end(Prometheus.register.metrics())
-  })
+const metricsInterval = Prometheus.collectDefaultMetrics()
 
 // Initialize the Swagger middleware
 http.createServer(app).listen(serverPort, function () {
